# finalbuddy

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
scripts/: combine_openalex.py  download_openalex.py  extract_relationships.py  ingest_openalex.sh  initialize_database.cypher  initialize_database.py
services/extraction-service/: Dockerfile  pyproject.toml
services/extraction-service/src/extraction/: client.py  config.py  entity_types.yaml  gliner.py  keyword_processor.py  main.py  pipeline.py
services/extraction-service/src/extraction/routers/: extract.py  health.py
services/graph-service/: Dockerfile  pyproject.toml
services/graph-service/src/graph/: config.py  db.py  embedder.py  main.py
services/graph-service/src/graph/routers/: chunks.py  documents.py  health.py  keywords.py  search.py
services/inference-service/: Dockerfile  pyproject.toml
services/inference-service/prompts/: ask.md  chat.md  keyword_summary.md  plan.md  synth.md
services/inference-service/src/inference/: client.py  config.py  graph_client.py  main.py  prompts.py
services/inference-service/src/inference/routers/: ask.py  embeddings.py  generation.py  health.py  plan.py  synth.py
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/src/ingestion/: chunker.py  config.py  factory.py  graph.py  main.py  parser.py
services/ingestion-service/src/ingestion/chunkers/: recursive.py
services/ingestion-service/src/ingestion/parsers/pdf/: pymupdf.py
services/processing-service/: pyproject.toml
services/processing-service/src/processing/: chunker.py  config.py  main.py
services/processing-service/src/processing/chunkers/: recursive.py
services/processing-service/src/processing/routers/: chunks.py
services/query-service/: pyproject.toml
shared/models/: pyproject.toml
shared/models/src/bookbuddy_models/: __init__.py  base.py  chunking.py  document.py  extraction.py  graph.py
