[project]
name = "extraction-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bookbuddy-models",
    "fastapi[standard]>=0.135.2",
    "flashtext>=2.7",
    "gliner2>=1.2.5",
    "httpx>=0.28.1",
    "inference-service",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
bookbuddy-models = { workspace = true }
inference-service = { workspace = true }

[project.scripts]
extraction-service = "extraction.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extraction"]
