[project]
name = "graph-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bookbuddy-models",
    "fastapi[standard]>=0.135.2",
    "neo4j>=6.1.0",
    "pydantic-settings>=2.13.1",
]

[tool.uv.sources]
bookbuddy-models = { workspace = true }

[project.scripts]
graph-service = "graph.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph"]
