[project]
name = "inference-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
inference-service = "inference.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]
