[project]
name = "ingestion-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bookbuddy-models",
    "pymupdf>=1.27.2.2",
]

[tool.uv.sources]
bookbuddy-models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
