[project]
name = "query-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bookbuddy-models",
    "inference-service",
    "graph-service",
]

[tool.uv.sources]
bookbuddy-models = { workspace = true }
inference-service = { workspace = true }
graph-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/query"]
